@startuml
'https://plantuml.com/class-diagram

package match {
        interface MatchManager extends ReadOnlyMatch{
          + move(Move move):boolean
          + undo():boolean
          + redo():boolean
          + pause():boolean
          + setIsSaved(boolean isSaved):void
          + quit():void
          + hint():Move
          + startTurn():void
        }

        abstract class Match implements MatchManager {
        }
        class MatchFactory{
        }

        class StandardMatch extends Match
        class BlitzMatch extends Match
        class ContestMatch extends Match

        interface ReadOnlyMatch {
            + getBoard(): RestrictedAgonBoard
            + getCurrentPlayer(): Player
        }

        class GameEngine {
        }

        class GameTimer{
        }
        enum MatchStatus{
        RUNNING
        FINISHED
        }

        record MoveDTO{
        }
        package player {
            interface Player {
                + getName(): String
                + getColor(): Color
                + getAction(AgonRegister<CmdAction> cmds): CmdAction
            }
            abstract class AbstractPlayer implements Player
            class HumanPlayer extends AbstractPlayer
            class AiPlayer extends AbstractPlayer
            class NetworkPlayer extends AbstractPlayer
        }
    }
    MatchFactory..>Match
    Match --> AgonBoard
    Match --> Player
    Match ..> GameEngine
    BlitzMatch --> GameTimer
    GameEngine-->Player
    GameEngine -->MatchManager
    Match --MatchStatus
    MoveDTO --Match
    @enduml